--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <hr>
         <div class="newuser">
             <span class="newuser-span">New User?</span> 
-            <a>Create Account</a>
+            <a href="./newuser.html">Create Account</a>
         </div>
       </form>
       <div class="personaltracker-desc">
