--- a/newuser.html
+++ b/newuser.html
@@ -71,7 +71,7 @@
           />
         </div>
         <div class="savebtn-container">
-          <button class="savebtn">Save</button>
+          <button id="savedetails" class="savebtn">Save</button>
         </div>
       </div>
     </div>
