--- a/main.html
+++ b/main.html
@@ -14,11 +14,210 @@
   <body id="body">
     <div class="nav-bar">
       <div class="rounded-icon">
-        <img id="profile-picture" class="profile-picture" src="" alt="profile-picture" />
+        <img
+          id="profile-picture"
+          class="profile-picture"
+          src=""
+          alt="profile-picture"
+        />
+      </div>
+      <div class="side-bar">
+        <div class="side-bar-container">
+          <div id="add-user-id" class="side-bar-link">
+            <div class="side-bar-icon">
+              <i class="fa-solid fa-sack-dollar"></i>
+            </div>
+            <span class="custom-span-links">Add Income and Expense Details</span>
+          </div>
+          <div id="signout-id" class="side-bar-link">
+            <div class="side-bar-icon">
+              <i class="fa-solid fa-sign-out"></i>
+            </div>
+            <span class="custom-span-links">Sign out</span>
+          </div>
+        </div>
       </div>
     </div>
     <div id="header" class="header">
       <!-- coded by using js-->
     </div>
+    <form id="userinformation" autocomplete="off" class="add-expense-income">
+      <h1 class="user-details-header">User Information</h1>
+      <div class="user-input-fields">
+        <div class="user-general-details-container">
+          <div class="label-with-input">
+            <!-- need to have two user inputs in one line i.e., label with input -->
+            <div class="label-input-combo">
+              <label>name</label>
+              <input readonly id="username" type="text" />
+            </div>
+            <div class="label-input-combo">
+              <label>email</label>
+              <input readonly id="useremail" type="email" />
+            </div>
+          </div>
+          <div class="label-with-input">
+            <div class="label-input-combo">
+              <label>phone no</label>
+              <input id="phone" required type="text" placeholder="Enter phone number" />
+            </div>
+            <div class="label-input-combo">
+              <label>DOB</label>
+              <input required id="dob" type="date" />
+            </div>
+          </div>
+          <div class="label-with-input">
+            <div class="label-input-combo">
+              <label>Primary Source of Income</label>
+              <select id="select" required>
+                <!-- u know where this gonna happened-->
+              </select>
+            </div>
+          </div>
+        </div>
+        <!--here -->
+        <div class="employee-is-a-primary-source">
+          <!-- this container only will visible when the user selects the 'Employee' as a primary source of income-->
+          <div class="employee-info-block">
+            <div class="employee-label-with-input">
+              <label class="employee-label">Company Name</label>
+              <input type="text" placeholder="Enter the Current Company name" />
+            </div>
+
+            <div class="employee-label-with-input">
+              <label class="employee-label">Job Designation</label>
+              <input type="text" placeholder="Enter the Job Title" />
+            </div>
+          </div>
+
+          <div class="employee-info-block">
+            <div class="employee-label-with-input">
+              <label class="employee-label">Current CTC</label>
+              <input
+                id="ctc"
+                type="text"
+                placeholder="Enter the CTC i.e, 442502"
+              />
+            </div>
+            <div class="employee-label-with-input">
+              <label class="employee-label">Monthly-In-hand</label>
+              <input type="text" placeholder="Enter the Monthly Salary" />
+            </div>
+          </div>
+
+          <div class="employee-info-block">
+            <div class="employee-label-with-input">
+              <label class="employee-label">Bonus(if any)</label>
+              <input
+                id="bonus"
+                type="text"
+                placeholder="Enter the Monthly Bonus"
+              />
+            </div>
+          </div>
+        </div>
+
+        <div class="business-is-a-primary-source">
+          <!--this container will only be visible when the user select the business as primary source of income -->
+          <div class="business-with-input-label-combo">
+            <div class="business-userinputs">
+              <label class="business-label">Business Name</label>
+              <input type="text" placeholder="Enter Business name" />
+            </div>
+            <div class="business-userinputs">
+              <label class="business-label">Business Type</label>
+              <select id="business-type">
+                <!-- handled by js-->
+              </select>
+            </div>
+          </div>
+
+          <div class="business-with-input-label-combo">
+            <div class="business-userinputs">
+              <label class="business-label">Industry</label>
+              <input
+                type="text"
+                placeholder="Enter Industry name i.e., IT, Retails"
+              />
+            </div>
+            <div class="business-userinputs">
+              <label class="business-label">Years Of Operation</label>
+              <input type="number" placeholder="Enter the number of Years" />
+            </div>
+          </div>
+
+          <div class="business-with-input-label-combo">
+            <div class="business-userinputs">
+              <label class="business-label">No of Employees</label>
+              <input type="text" placeholder="Enter Employee Count" />
+            </div>
+            <div class="business-userinputs">
+              <label class="business-label">Average Monthly Income</label>
+              <input type="text" placeholder="Enter Average Monthly Income" />
+            </div>
+          </div>
+
+          <div class="business-with-input-label-combo">
+            <div class="business-userinputs">
+              <label class="business-label">Primary Market</label>
+              <select id="primary-market">
+                <!--please reach out js makeprimarymarketdropdown()-->
+              </select>
+            </div>
+          </div>
+        </div>
+
+        <div class="freelance-is-a-primary-source">
+          <!-- this container will only be visible when the user selects the freelance as a primary source of income-->
+          <div class="freelance-label-input-combo">
+            <div class="freelance-userinputs">
+              <label class="freelance-label">Freelance Service</label>
+              <input type="text" placeholder="Enter Freelance Service" />
+            </div>
+
+            <div class="freelance-userinputs">
+              <label class="freelance-label">Years of Experience</label>
+              <input
+                type="number"
+                placeholder="Enter the years of experience"
+              />
+            </div>
+          </div>
+          <div class="freelance-label-input-combo">
+            <div class="freelance-userinputs">
+              <label class="freelance-label">Average Monthly Salary</label>
+              <input type="text" placeholder="Enter Average Montly Salary" />
+            </div>
+
+            <div class="freelance-userinputs">
+              <label class="freelance-label">Top Clients 1</label>
+              <input
+                type="text"
+                placeholder="Enter a Client or Company name"
+              />
+            </div>
+          </div>
+          <div class="freelance-label-input-combo">
+            <div class="freelance-userinputs">
+              <label class="freelance-label">Prefered Payment Method</label>
+              <select id="payment-method">
+                <!-- look js code makepaymentmethoddropdown()-->
+              </select>
+            </div>
+
+            <div class="freelance-userinputs">
+              <label class="freelance-label">Working Platform</label>
+              <input type="text" placeholder="Enter a Working Platform" />
+            </div>
+          </div>
+        </div>
+
+        <!-- common save button-->
+        <div class="save-btn-container">
+          <button type="submit" class="savebtn">Save</button>
+        </div>
+
+      </div>
+    </form>
   </body>
 </html>
