--- a/main.html
+++ b/main.html
@@ -71,8 +71,12 @@
         <span id="getBalance">Nil</span>
       </div>
     </div>
-    <div class="add-expense-button-container">
+    <div class="expense-and-transaction-button-container">
       <button class="add-expense-button">add expense</button>
+      <button class="transaction-history-button">Transaction History</button>
+    </div>
+    <div id="few-transactions" class="view-transaction-history-container">
+        
     </div>
     <form id="userinformation" autocomplete="off" class="add-expense-income">
       <h1 class="user-details-header">User Information</h1>
