begin transaction page

--- a/main.html
+++ b/main.html
@@ -76,7 +76,15 @@
       <button class="transaction-history-button">Transaction History</button>
     </div>
     <div id="few-transactions" class="view-transaction-history-container">
-        
+      <!-- table creation -->
+      <div class="table-container">
+        <table id="few-transaction-history-table">
+          <!-- js code consider the table as parent-->
+        </table>
+      </div>
+      <div class="view-more-transaction-button-container">
+          <button class="view-more-btn">View More</button>
+      </div>
     </div>
     <form id="userinformation" autocomplete="off" class="add-expense-income">
       <h1 class="user-details-header">User Information</h1>
